# HandmadeRust

./: .gitignore  .travis.yml  Cargo.toml  README.md  rustfmt.toml
cbor/: Cargo.toml  de.rs  lib.rs  ser.rs  tests.rs
fnd/: Cargo.toml  ashared.rs  bitflags.rs  dl.rs  fmt.rs  fs.rs  io.rs  lib.rs  linalg.rs  num.rs  shared.rs  thread.rs  unique.rs  zlib.rs
fnd/alloc/: allocator.rs  global.rs  layout.rs  mod.rs  win32_heap.rs
fnd/containers/: array.rs  hash_map.rs  hash_set.rs  mod.rs  queue.rs  raw_array.rs  small_array.rs  string.rs  wstring.rs
fnd/hash/: adler32.rs  mod.rs  murmur3.rs  sip.rs
fnd/io/: bit_reader.rs  impls.rs  mod.rs  peek_one.rs  std.rs  traits.rs
fnd/serde/: impls.rs  traits.rs
fnd/src/: array.rs  lib.rs  unique.rs
fnd/str/: cstr.rs  mod.rs
fnd/sync/: mod.rs  mutex.rs  once.rs
fnd/test_data/: lorem_ipsum.txt
gfx/: Cargo.toml
gfx/hal/: Cargo.toml
gfx/src/: capabilities.rs  command_buffer.rs  command_pool.rs  conv.rs  device.rs  instance.rs  lib.rs  queue.rs  surface.rs  swapchain.rs
gfx/vulkan_backend/: Cargo.toml
hash_macro/: Cargo.toml
hash_macro/src/: lib.rs
main/: Cargo.toml  main.rs  msvc.rs  vk_init.rs
main/hal/: mod.rs
main/hal/vulkan/: mod.rs
main/wsi/: event.rs  window.rs
sandbox/: Cargo.toml
sandbox/src/: impls.rs  main.rs  traits.rs
tlsf/: Cargo.toml
vk/: Cargo.toml  README.md  builders.rs  commands.rs  device.rs  entry_point.rs  instance.rs  lib.rs  loader.py  model.py  rust_generator.py  types.rs  utils.rs  vk.xml
win32/: Cargo.toml  kernel32.rs  lib.rs  types.rs  user32.rs
wsi/: Cargo.toml
(+32 files in other folders)
