[package]
name = "main"
version = "0.1.0"
authors = ["Steven Le Rouzic <steven.lerouzic@gmail.com>"]
edition = "2018"

[[bin]]
name = "main"
path = "main.rs"

[dependencies]
vk = { path = "../vk" } # @Todo Remove this eventually
fnd = { path = "../fnd" }
win32 = { path = "../win32" } # @Todo Remove this eventually
gfx_hal = { path = "../gfx/hal" }
gfx_vulkan_backend = { path = "../gfx/vulkan_backend" }
