[package]
name = "main"
version = "0.1.0"
authors = ["Steven Le Rouzic <steven.lerouzic@gmail.com>"]
edition = "2018"

[[bin]]
name = "main"
path = "main.rs"

[dependencies]
fnd = { path = "../fnd" }
gfx_hal = { path = "../gfx/hal" }
gfx_vulkan_backend = { path = "../gfx/vulkan_backend" }
wsi = { path = "../wsi" }